[package]
name = "ctd"
version = "0.2.0"
edition = "2021"
description = "Campo de Tensión Diferencial (CTD) - Arquitectura cognitiva emergente"
license = "GPL-3.0"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ctd_main"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/eval.rs"
